@@ -18,6 +18,11 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-10-12  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/powerpc32/addlsh1_n.asm: New file.
+	* mpn/powerpc32/sublsh1_n.asm: New file.
+
 2003-10-11  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/ia64/rsh1aors_n.asm: New file.
